* Oct 18 2017 Massimiliano Pala <madwolf@openca.org>
- Small memory leak fix for logging on stderr and stdout
- Fixed small memory leak in PKI_X509_NAME_get_parsed()
- Simplified PKI_X509_CERT_check_pubkey() internals

* Sep 25 2017 Massimiliano Pala <madwolf@openca.org>
- Fixed an error for default HSM callbacks for OpenSSL tokens that prevented signature generation
- Fixed an error for OpenSSL's key generation (wrong return code)

* Jun  5 2017 Massimiliano Pala <madwolf@openca.org>
- Fixed backward compatibility with OpenSSL v1.0.x

* May 28 2017 Massimiliano Pala <madwolf@openca.org>
- Initiated port to OpenSSL v1.1.x

* Dec 26 2016 Massimiliano Pala <madwolf@openca.org>
- Fixed distclean target to remove test and docs directories
- Fixed some memory issues w/ PKCS11 module
- Fixed some tests details (min key sizes updated)

* Mar 25 2015 Massimiliano Pala <madwolf@openca.org>
- Added responderId type parameter in OCSP response signing

* Jan  4 2015 Massimiliano Pala <madwolf@openca.org>
- Fixed PKI_TOKEN_load_cert() when setting the token's algor
- Fixed I/O return type for PKI_X509_get()

* Aug 14 2014 Massimiliano Pala <madwolf@openca.org>
- Fixed two bugs in PKI_RWLOCK_write_lock() that caoused deadlock if no RWLOCK support for pthread is available.

* Aug  9 2014 Massimiliano Pala <madwolf@openca.org>
- Optimized OCSP req and resp internal handling functions
- Added PKI_X509_CERT_check_key() to verify that the same pubkey is in cert and key

* Aug  6 2014 Massimiliano Pala <madwolf@openca.org>
- Added additional checks for OCSP response signing
- Added PKI_X509_OCSP_REQ_has_nonce() to easily detect NONCEs in OCSP requests
- Moved to use calloc() to provide better cross-processes memory protection
- Removed old commented code

* Aug  1 2014 Massimiliano Pala <madwolf@openca.org>
- Fixed inconsistency in PKI_MEM_url_decode / PKI_MEM_url_encode functions
- Added PKI_MEM_url_get_encoded and PKI_MEM_url_get_decoded functions