@@ -22,6 +22,26 @@ int PRQP_init_all_services ( void );
 
 /* Certificate Identifier */
 CERT_IDENTIFIER * PKI_PRQP_CERTID_new_cert(
+		PKI_X509_CERT  * caCert, 
+		PKI_X509_CERT  * issuerCert,
+		PKI_X509_CERT  * issuedCert,
+		char           * subject_s,
+		char           * serial_s,
+		PKI_DIGEST_ALG * dgst );
+
+CERT_IDENTIFIER *PKI_PRQP_CERTID_new(
+                const PKI_X509_NAME  * caName,
+		const PKI_X509_NAME  * caIssuerName,
+                const PKI_INTEGER    * serial,
+		const PKI_STRING     * caCertHash,
+		const PKI_STRING     * caKeyHash,
+                const PKI_STRING     * caKeyId,
+		const PKI_STRING     * issKeyId,
+		const PKI_DIGEST_ALG *dgst);
+
+/* Certificate Identifier */
+/*
+CERT_IDENTIFIER * PKI_PRQP_CERTID_new_cert(
 		const PKI_X509_CERT  * caCert, 
 		const PKI_X509_CERT  * issuerCert,
 		const PKI_X509_CERT  * issuedCert,
@@ -38,6 +58,7 @@ CERT_IDENTIFIER *PKI_PRQP_CERTID_new(
                 const PKI_STRING     * caKeyId,
 		const PKI_STRING     * issKeyId,
 		const PKI_DIGEST_ALG *dgst);
+*/
 
 /* General Signature Function for req or resp */
 int PKI_X509_PRQP_sign( PKI_X509 *obj, PKI_X509_KEYPAIR *k,
