@@ -201,13 +201,7 @@ static void * _get_bag_value(
         p8 = bag->value.keybag;
         if ((pkey = EVP_PKCS82PKEY((PKCS8_PRIV_KEY_INFO *)p8)) == NULL) return (NULL);
 #endif
-<<<<<<< HEAD
 
-=======
-        if (!(pkey = EVP_PKCS82PKEY((PKCS8_PRIV_KEY_INFO *)p8))) {
-          return (NULL);
-        }
->>>>>>> 38a4f9b28e5e8944c66d892bb65ea5edf348ccb1
         // print_attribs (out, p8->attributes, "Key Attributes");
         // PEM_write_bio_PrivateKey (out, pkey, enc, NULL, 0, NULL, pempass);
         // ret = EVP_PKEY_new();
@@ -226,18 +220,13 @@ static void * _get_bag_value(
       if (!(p8 = PKCS12_decrypt_skey(bag, pwd, (int) strlen(pwd)))) {
         return ( NULL );
       }
-<<<<<<< HEAD
+
 #if OPENSSL_VERSION_NUMBER > 0x1010000fL
       if ((pkey = EVP_PKCS82PKEY(p8)) == NULL) return (NULL);
 #else
       if ((pkey = EVP_PKCS82PKEY((PKCS8_PRIV_KEY_INFO *)p8)) == NULL) return (NULL);
 #endif
-=======
-      if (!(pkey = EVP_PKCS82PKEY((PKCS8_PRIV_KEY_INFO *)p8))) {
-        // PKCS8_PRIV_KEY_INFO_free(p8);
-        return (NULL);
-      }
->>>>>>> 38a4f9b28e5e8944c66d892bb65ea5edf348ccb1
+
       if (( k = PKI_X509_KEYPAIR_new_null()) == NULL ) {
         return NULL;
       }
